--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,9 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /static
+  static_dir: static
+
 - url: /_ah/spi/.*
   script: safezone_api.app
 
