--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: perfect-atrium-421
-version: 1
+version: "1-1"
 runtime: python27
 api_version: 1
 threadsafe: yes
@@ -17,6 +17,7 @@ handlers:
 
 - url: .*
   script: main.app
+  secure: always
 
 libraries:
 - name: webapp2
