Added single view and edit and delete

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: perfect-atrium-421
-version: "1-1"
+application: perfect-atrium-421button
+version: "1-1-1"
 runtime: python27
 api_version: 1
 threadsafe: yes
